--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b9787d25",
+   "metadata": {},
+   "source": [
+    "\n",
+    "mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "064ef857",
    "metadata": {},
@@ -18,22 +28,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n"
+    "# Import dependencies\n",
+    "from pymongo import MongoClient\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of MongoClient\n"
+    "# Create an instance of MongoClient\n",
+    "# The default port used by MongoDB is 27017\n",
+    "# https://docs.mongodb.com/manual/reference/default-mongodb-port/\n",
+    "mongo = MongoClient(port=27017)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9b7c2be0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'config', 'local', 'uk_food']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list all the databases in the MongoDB \n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
@@ -247,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
