--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9b7c2be0",
    "metadata": {},
    "outputs": [
@@ -72,32 +72,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the uk_food database to a variable name\n"
+    "# assign the uk_food database to a variable name\n",
+    "db = mongo['uk_food']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "11c9f11b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6402ef18eae046d41306a780'),\n",
+      " 'geocode': {'latitude': Decimal128('51.083812'),\n",
+      "             'longitude': Decimal128('1.195625')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# assign the collection to a variable\n"
+    "# assign the collection to a variable\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
@@ -122,28 +177,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total number of hygiene with count 20  is 41\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query = {\"scores.Hygiene\":20}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
+    "countHygiene = db.establishments.count_documents(query)\n",
     "\n",
+    "print(f\"total number of hygiene with count 20  is {countHygiene}\")\n",
     "# Display the first document in the results using pprint\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Collection' object is not callable. If you meant to call the 'query' method on a 'Collection' object it is failing because no such method exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11452\\767450656.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhygiene\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mestablishments\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mhy\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mhygiene\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Convert the result to a Pandas DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\shweta.jain\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pymongo\\collection.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3341\u001b[0m                         \u001b[1;34m\"call the '%s' method on a 'Collection' object it is \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3342\u001b[0m                         \u001b[1;34m\"failing because no such method exists.\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3343\u001b[1;33m                         self.__name.split(\".\")[-1])\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'Collection' object is not callable. If you meant to call the 'query' method on a 'Collection' object it is failing because no such method exists."
+     ]
+    }
+   ],
    "source": [
-    "# Convert the result to a Pandas DataFrame\n",
+    "hygiene = db.establishments.query(query)\n",
     "\n",
+    "for hy in hygiene:\n",
+    "    print(hy)\n",
+    "# Convert the result to a Pandas DataFrame\n",
+    "#result_df = pd.DataFrame(hygiene)\n",
     "# Display the number of rows in the DataFrame\n",
     "\n",
     "# Display the first 10 rows of the DataFrame\n"
