Updated the NoSQL_analysis_starter.ipynb file

--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "9b7c2be0",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "9                      F & S"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "07e24ccb",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of rows in the Dataframe :33\n"
+      "Total number of rows in the Dataframe :34\n"
      ]
     },
     {
@@ -586,6 +586,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>6409934a62de5b35b91025cb</td>\n",
+       "      <td>1252616</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PI/000035653</td>\n",
+       "      <td>Froottree</td>\n",
+       "      <td>Other catering premises</td>\n",
+       "      <td>7841</td>\n",
+       "      <td>Tereza Joanne King George V Lock</td>\n",
+       "      <td>Woolwich Manor Way London</td>\n",
+       "      <td>Charlton</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.069325</td>\n",
+       "      <td>51.501110</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0001-01-01T00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>6409934a62de5b35b91025d0</td>\n",
        "      <td>293756</td>\n",
        "      <td>0</td>\n",
@@ -609,7 +633,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>6409934a62de5b35b9102994</td>\n",
        "      <td>878523</td>\n",
        "      <td>0</td>\n",
@@ -633,7 +657,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>6409934a62de5b35b91029ae</td>\n",
        "      <td>295107</td>\n",
        "      <td>0</td>\n",
@@ -643,30 +667,6 @@
        "      <td>1</td>\n",
        "      <td>London City Airport (Airside)</td>\n",
        "      <td>London</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.047966</td>\n",
-       "      <td>51.504112</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0001-01-01T00:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6409934a62de5b35b91029c5</td>\n",
-       "      <td>293772</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PI/000002585</td>\n",
-       "      <td>The Nuance Group (UK) Limited</td>\n",
-       "      <td>Retailers - other</td>\n",
-       "      <td>4613</td>\n",
-       "      <td>Duty Free Shop Passenger Terminal</td>\n",
-       "      <td>London City AirportRoyal DocksLondon</td>\n",
        "      <td></td>\n",
        "      <td>...</td>\n",
        "      <td>0.047966</td>\n",
@@ -693,10 +693,10 @@
        "3  6409934962de5b35b90ffdb5  1315095                  0   \n",
        "4  6409934962de5b35b90ffdb6   294474                  0   \n",
        "5  6409934962de5b35b91004be   294900                  0   \n",
-       "6  6409934a62de5b35b91025d0   293756                  0   \n",
-       "7  6409934a62de5b35b9102994   878523                  0   \n",
-       "8  6409934a62de5b35b91029ae   295107                  0   \n",
-       "9  6409934a62de5b35b91029c5   293772                  0   \n",
+       "6  6409934a62de5b35b91025cb  1252616                  0   \n",
+       "7  6409934a62de5b35b91025d0   293756                  0   \n",
+       "8  6409934a62de5b35b9102994   878523                  0   \n",
+       "9  6409934a62de5b35b91029ae   295107                  0   \n",
        "\n",
        "  LocalAuthorityBusinessID                          BusinessName  \\\n",
        "0             PI/000025307                             Charlie's   \n",
@@ -705,10 +705,10 @@
        "3             PI/000036464  Coombs Catering t/a The Lock and Key   \n",
        "4             PI/000014647              Tilbury Seafarers Centre   \n",
        "5             PI/000019066                            Mv Valulla   \n",
-       "6             PI/000002538                         Tereza Joanne   \n",
-       "7             PI/000029844                      Brick Lane Brews   \n",
-       "8             PI/000020749                      City Bar & Grill   \n",
-       "9             PI/000002585         The Nuance Group (UK) Limited   \n",
+       "6             PI/000035653                             Froottree   \n",
+       "7             PI/000002538                         Tereza Joanne   \n",
+       "8             PI/000029844                      Brick Lane Brews   \n",
+       "9             PI/000020749                      City Bar & Grill   \n",
        "\n",
        "              BusinessType  BusinessTypeID  \\\n",
        "0  Other catering premises            7841   \n",
@@ -718,9 +718,9 @@
        "4  Restaurant/Cafe/Canteen               1   \n",
        "5  Other catering premises            7841   \n",
        "6  Other catering premises            7841   \n",
-       "7  Restaurant/Cafe/Canteen               1   \n",
+       "7  Other catering premises            7841   \n",
        "8  Restaurant/Cafe/Canteen               1   \n",
-       "9        Retailers - other            4613   \n",
+       "9  Restaurant/Cafe/Canteen               1   \n",
        "\n",
        "                                        AddressLine1  \\\n",
        "0         Oak Apple Farm Building 103 Sheernes Docks   \n",
@@ -729,22 +729,22 @@
        "3                                  Leslie Ford House   \n",
        "4                          Tenants Row Tilbury Docks   \n",
        "5  Reeds River Cruises LtdKings ReachRiver Thames...   \n",
-       "6  Funcraft UK Ltd King George V Dock Woolwich Ma...   \n",
-       "7                       Air side London City Airport   \n",
-       "8                      London City Airport (Airside)   \n",
-       "9                  Duty Free Shop Passenger Terminal   \n",
+       "6                   Tereza Joanne King George V Lock   \n",
+       "7  Funcraft UK Ltd King George V Dock Woolwich Ma...   \n",
+       "8                       Air side London City Airport   \n",
+       "9                      London City Airport (Airside)   \n",
        "\n",
-       "                           AddressLine2 AddressLine3  ... geocode.longitude  \\\n",
-       "0                           Sheppy Kent               ...          0.508551   \n",
-       "1      Cherry Garden Street Rotherhithe     Charlton  ...          0.249256   \n",
-       "2                  South Benfleet Essex               ...          0.561954   \n",
-       "3                               Tilbury     Charlton  ...          0.346337   \n",
-       "4                         Tilbury Essex               ...          0.346325   \n",
-       "5                                London               ...          0.287555   \n",
-       "6                                London               ...          0.069286   \n",
-       "7                                London               ...          0.048006   \n",
-       "8                                London               ...          0.047966   \n",
-       "9  London City AirportRoyal DocksLondon               ...          0.047966   \n",
+       "                       AddressLine2 AddressLine3  ... geocode.longitude  \\\n",
+       "0                       Sheppy Kent               ...          0.508551   \n",
+       "1  Cherry Garden Street Rotherhithe     Charlton  ...          0.249256   \n",
+       "2              South Benfleet Essex               ...          0.561954   \n",
+       "3                           Tilbury     Charlton  ...          0.346337   \n",
+       "4                     Tilbury Essex               ...          0.346325   \n",
+       "5                            London               ...          0.287555   \n",
+       "6         Woolwich Manor Way London     Charlton  ...          0.069325   \n",
+       "7                            London               ...          0.069286   \n",
+       "8                            London               ...          0.048006   \n",
+       "9                            London               ...          0.047966   \n",
        "\n",
        "  geocode.latitude meta.dataSource     meta.extractDate meta.itemCount  \\\n",
        "0        51.369321            None  0001-01-01T00:00:00              0   \n",
@@ -753,9 +753,9 @@
        "3        51.464066            None  0001-01-01T00:00:00              0   \n",
        "4        51.464078            None  0001-01-01T00:00:00              0   \n",
        "5        51.504071            None  0001-01-01T00:00:00              0   \n",
-       "6        51.501121            None  0001-01-01T00:00:00              0   \n",
-       "7        51.503733            None  0001-01-01T00:00:00              0   \n",
-       "8        51.504112            None  0001-01-01T00:00:00              0   \n",
+       "6        51.501110            None  0001-01-01T00:00:00              0   \n",
+       "7        51.501121            None  0001-01-01T00:00:00              0   \n",
+       "8        51.503733            None  0001-01-01T00:00:00              0   \n",
        "9        51.504112            None  0001-01-01T00:00:00              0   \n",
        "\n",
        "  meta.returncode meta.totalCount meta.totalPages meta.pageSize  \\\n",
@@ -785,7 +785,7 @@
        "[10 rows x 38 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ae84654c",
    "metadata": {},
    "outputs": [
@@ -814,14 +814,14 @@
        "3    Coombs Catering t/a The Lock and Key\n",
        "4                Tilbury Seafarers Centre\n",
        "5                              Mv Valulla\n",
-       "6                           Tereza Joanne\n",
-       "7                        Brick Lane Brews\n",
-       "8                        City Bar & Grill\n",
-       "9           The Nuance Group (UK) Limited\n",
+       "6                               Froottree\n",
+       "7                           Tereza Joanne\n",
+       "8                        Brick Lane Brews\n",
+       "9                        City Bar & Grill\n",
        "Name: BusinessName, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d8c7b41d",
    "metadata": {},
    "outputs": [
@@ -858,19 +858,19 @@
     "query = {'BusinessName': 'Penang Flavours'}\n",
     "fields = {'geocode.latitude': 1,'geocode.longitude':1,\"_id\": 0}\n",
     "result = establishments.find_one(query, fields)\n",
-    "lat = 0\n",
-    "lon = 0\n",
+    "latitude = 0\n",
+    "longitude = 0\n",
     "for key,value in result[\"geocode\"].items():\n",
     "    if(key==\"latitude\"):\n",
-    "        lat = value\n",
+    "        latitude = value\n",
     "    if(key==\"longitude\"):\n",
-    "        lon =value\n",
-    "print(f\"{lat} {lon}\")"
+    "        longitude =value\n",
+    "print(f\"{latitude} {longitude}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -1068,12 +1068,11 @@
     "# Sort by hygiene score\n",
     "\n",
     "degree_search = 0.01\n",
-    "latitude = lat\n",
-    "longitude = lon\n",
     "min_lat= latitude-degree_search\n",
     "max_lat = latitude+degree_search\n",
-    "\n",
-    "query = {'RatingValue':'5','geocode.latitude':{'$gte':min_lat,'$lte':max_lat},'geocode.longitude':{'$gte':(longitude-degree_search),'$lte':(longitude+degree_search)}} \n",
+    "min_lon = longitude-degree_search\n",
+    "max_lon = longitude + degree_search\n",
+    "query = {'RatingValue':'5','geocode.latitude':{'$gte':min_lat,'$lte':max_lat},'geocode.longitude':{'$gte':(min_lon),'$lte':(max_lon)}} \n",
     "\n",
     "# Run the query with the aggregate method and save the results to a variable\n",
     "results = establishments.find(query).sort(\"scores.Hygiene\",-1).limit(5)\n",
@@ -1090,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "62867c7d",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of restaurants with ratings as 55\n"
+      "Number of restaurants with 0 as ratings as 55\n"
      ]
     },
     {
@@ -1389,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
